01/02/2002

 * Modified copyright for compatibility with the now LGPL SWI-Prolog system

07/12/2001

 * FIXED: memory_file_to_atom/2 and friends to return size 0, empty atom
   when the file contains no data.

10/06/2001
 
 * ADDED: library(mime) for MIME message parsing.

07/10/2000
 
 * ADDED: Allow for descriptor to arguments of dup/2.

30/06/1999

 * ADDED: cgi.pl, cgi.c and form.[ch] providing cgi_get_form/1 to get the
   Form-data if SWI-Prolog is installed as a CGI script.

06/04/1999

 * Renamed the predicates from the socket package to tcp_<their-old-name>.
   These predicates are meant as low-level primitives and their normal name
   is too general.